# sparc-residual-disturbance-paper1

./: .gitignore  CITATION.cff  DATA_NOTICE.md  LICENSE  README.md  pyproject.toml  requirements.txt
arxiv/: README.md  main.tex
figures/: README.md
outputs/: hecate_crossmatch_summary.csv
outputs/external_proxy_v06_distance_balanced/: coherence_control_report.json  coherence_label_diagnostics.csv  coherence_labels_suggested.csv  coherence_stats_report.json  metric_robustness.csv  sparc_pilot_summary.md  sparc_residual_summary.csv  threshold_sensitivity.csv
paper1_submission_source/: main.tex
src/taucore/: __init__.py  coherence.py  controls.py  external.py  external_catalogs.py  figures.py  galaxy_activation.py  labeling.py  metadata.py  reporting.py  residuals.py  sparc.py
studies/illustrative_rotation_curves/: README.md  paper1_context_rotation_points.csv
studies/sparc_residual_coherence_test_v01/: coherence_labels_v06_distance_balanced.csv  download_s_tau_sources.py  download_sparc_data.py  external_proxy_review_workbook_v05_final.csv  make_arxiv_source.py  make_effect_size_and_systematics_appendix.py  make_labeling_protocol_and_baselines.py  make_manuscript_pdf.py  make_selection_and_regression_appendix.py
studies/sparc_residual_coherence_test_v01/paper_packet_v06_distance_balanced/: baseline_score_by_galaxy.csv  baseline_score_comparisons.csv  baseline_score_comparisons.md  continuous_s_tau_manifest.csv  continuous_s_tau_manifest.md  continuous_s_tau_protocol.md  controlled_regression_appendix.md  (+49 more)
tests/: test_public_reproducibility_package.py
